--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,8 +2,8 @@ project:
   type: website
 
 website:
-  google-analytics: "G-VVFCV6MNHG"
-  title: "ISSS624"
+  google-analytics: "G-PKMQ2W4ZRC"
+  title: "ISSS608"
   navbar:
     left: 
       - text: References & Notes
