--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,13 +8,13 @@ website:
     left: 
       - text: Hands-on Exercises
         menu: 
-          - text: Hands-on Exercise [1]
+          - text: Hands-on Ex[1] Explore with ggplot2 Package
             href: handsOn_ex1.qmd
             
       - text: In-class Exercises
         menu: 
-          - text: In-class Exercise [1]
-            href: in-class_ex/in-class_ex1/In-class_Ex1.qmd
+          - text: In-class Ex[1] S & P Summary with Tableau
+            href: https://public.tableau.com/shared/5GXCKXPQD?:display_count=n&:origin=viz_share_link
             
       - text: Projects
         menu: 
