--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,7 +18,7 @@ website:
             
       - text: Take-home Exercises
         menu: 
-          - text: Take Home Exercise 1
+          - text: Take-home Ex[1] Singapore Population Pyramid 2022
             href: takeHome/th_ex1/th_ex1.qmd
      
       - text: Workshop & Notes
