--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,6 +3,7 @@ project:
 
 website:
   google-analytics: "G-PKMQ2W4ZRC"
+  cookie-consent: true
   title: "ISSS608"
   navbar:
     left: 
@@ -72,7 +73,7 @@ format:
     theme: flatly
     css: styles.css
     toc: true
+    highlight-style: solarized
     
-
 editor: visual
 
