--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,7 +7,7 @@ website:
   title: "ISSS608"
   navbar:
     left: 
-      - text: Hands-on Exercises[1-6]
+      - text: Lesson Exercises[1-6]
         menu: 
           - text: Ex[1] DataVis with ggplot2
             href: handsOn_ex1.qmd
@@ -40,7 +40,7 @@ website:
           - text: Ex[6.2] Create Cycle Plot
             href: handsOn_ex6.2.qmd
 
-      - text: Hands-on Exercises[7-10]
+      - text: Lesson Exercises[7-10]
         menu: 
           - text: Ex[7.1] Choropleth Mapping
             href: handsOn_ex7.1.qmd
@@ -90,10 +90,8 @@ website:
             href: takeHome/th_ex4/th_ex4.qmd
           - text: Ex[4.2] Singapore Merchandise Trade Financial Year 2019 to 2022
             href: takeHome/th_ex4/th_ex4.2.qmd     
-          - text: Group Project - Geospatial Analytical App for Water Points
-            href: https://waterislife.netlify.app/
           - text: Water Is Life Shiny App
-            href: https://rkyaw.shinyapps.io/nigeria_waterpoint/
+            href: https://waterislife.netlify.app/user_guide.html
      
       - text: Workshop & Notes
         menu:
